[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/palladium/core/character_nodes.gd" type="Script" id=1]
[ext_resource path="res://sound/environment/falling_to_floor.ogg" type="AudioStream" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.88, 1, 0.4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.88, 1, 0.75 )

[node name="character_nodes" type="Spatial"]
script = ExtResource( 1 )

[node name="SoundWalking" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
bus = "Sound"

[node name="SoundFallingToFloor" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 2 )
bus = "Sound"

[node name="SoundAngry" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
unit_db = 6.0
max_db = 6.0
bus = "Sound"

[node name="SoundPain" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
unit_db = 6.0
max_db = 6.0
bus = "Sound"

[node name="SoundAttack" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
bus = "Sound"

[node name="SoundMiss" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
bus = "Sound"

[node name="MeleeAttackArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.067, 1.25 )
input_ray_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 6144

[node name="CollisionShape" type="CollisionShape" parent="MeleeAttackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.35 )
shape = SubResource( 1 )

[node name="MeleeDamageArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.067, 1.25 )
input_ray_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 6144

[node name="CollisionShape" type="CollisionShape" parent="MeleeDamageArea"]
shape = SubResource( 2 )

[node name="StandingRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
cast_to = Vector3( 0, 0.9, 0 )
collision_mask = 1024

[node name="UnderFeetRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
cast_to = Vector3( 0, -2.4, 0 )
collision_mask = 23

[node name="RaysToCharacters" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="RangedDamageRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 15383

[node name="HealTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="OxygenTimer" type="Timer" parent="."]

[node name="PoisonTimer" type="Timer" parent="."]

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.4
one_shot = true

[node name="RestTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="timeout" from="OxygenTimer" to="." method="_on_OxygenTimer_timeout"]
[connection signal="timeout" from="PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
